[package]
name = "tracing-logger-config"
version = "0.1.1"
description = "Custom logger config for tracing"
authors = ["Rust Latam <rust.lang.latam@gmail.com>"]
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
repository = "https://gitlab.com/proximax-latam/celebrities"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "0.4"
opentelemetry = "0.24"
opentelemetry-otlp = { version = "0.17", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
serde = { version = "1.0", features = ["derive"] }
tracing = { version = "0.1", features = ["log"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.25"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "chrono"] }